[package]
name = "cargo-check-packages"
version = "0.1.0"
authors = ["Blue <010blue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
toml = "0.5.5"
reqwest = "0.9.22"